# first_mate

./: .env.example  .env.prod.example  .gitignore  CLAUDE_CODE_PROMPT.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  ai.py  cart.py  checklist.py  helm_dash.py  loyalty.py  order.py  product.py  user.py  vessel.py
backend/app/routers/: ai.py  auth.py  cart.py  checklists.py  content.py  helm_dash.py  loyalty.py  orders.py  payments.py  products.py  search.py  shipping.py  users.py  vessels.py
backend/app/schemas/: ai.py  cart.py  helm_dash.py  loyalty.py  order.py  product.py  shipping.py  user.py  vessel.py
backend/app/tests/: conftest.py  test_ai.py  test_auth.py  test_cart.py  test_checklists.py  test_experiences.py  test_health.py  test_helm_dash.py  test_langchain_agent.py  test_loyalty.py  test_monitoring.py  test_multiplier.py  test_orders.py  test_payments.py  test_product_catalogue.py  test_product_images.py  test_production_config.py  test_products.py  test_shipping.py  test_users.py  test_vessels.py
deploy/: deploy.sh  setup.sh
deploy/nginx/: nginx.conf
docs/01_research/: B2C_Parts_Websites_Analysis.md  SKU_Intelligence_and_Data_Sources_Report.md  b2c_parts_websites_report.md  maritimenz_safety_checklist.md  nz_fishing_spending_data.md
docs/05_wireframes/: index.html
frontend/: analysis_options.yaml  pubspec.yaml
scripts/: build.sh
(+83 files in other folders)
